--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "jsdom": "^20.0.0"
+    "jsdom": "^20.0.0",
+    "mongodb": "^4.9.1"
   }
 }
